[project]
name = "spaitialai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.10"
dependencies = [
    "diffusers>=0.33.1",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "scikit-learn>=1.7.0",
    "torch",
    "torchvision",
    "tqdm>=4.67.1",
    "tyro>=0.9.24",
    "wandb>=0.20.1",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.4.1%2Bcu121-cp310-cp310-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.19.1%2Bcu121-cp310-cp310-linux_x86_64.whl" }
