[project]
name = "spaitialai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.10"
dependencies = [
  "diffusers>=0.33.1",
  "imageio>=2.37.0",
  "ipdb>=0.13.13",
  "ipython>=8.37.0",
  "jaxtyping>=0.3.2",
  "matplotlib>=3.10.3",
  "pillow>=11.2.1",
  "pre-commit>=4.2.0",
  "pydantic>=2.11.5",
  "rich>=14.0.0",
  "scikit-learn>=1.7.0",
  "torch==2.4.1",
  "torchsummary>=1.5.1",
  "torchvision==0.19.1",
  "tqdm>=4.67.1",
  "tyro>=0.9.24",
  "wandb>=0.20.1"
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = {index = "pytorch-gpu"}
torchvision = {index = "pytorch-gpu"}
